# ComputerGraphics

./: README.md
OpenGl/OpenGl1/Guan_Thioux_OpenGL_1 4/: README.txt
OpenGl/OpenGl1/Guan_Thioux_OpenGL_1 4/build-OpenGL_1-Desktop_Qt_5_12_12_clang_64bit-Debug/: Makefile  moc_mainview.cpp  moc_mainwindow.cpp  moc_predefs.h
OpenGl/OpenGl1/Guan_Thioux_OpenGL_1 4/code/: CMakeLists.txt  OpenGL_1.pro  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h
OpenGl/OpenGl1/Guan_Thioux_OpenGL_1 4/code/shaders/: vertshader.glsl
OpenGl/OpenGl2/GuanThiouxOpenGL2 3/: README
OpenGl/OpenGl2/GuanThiouxOpenGL2 3/Code/: OpenGL_2.pro  OpenGL_2.pro.user.a21ab8d  OpenGL_2.pro.user.d4f55c7  mainview.cpp  mainview.h  mainwindow.cpp  model.cpp  resources.qrc
OpenGl/OpenGl2/GuanThiouxOpenGL2 3/build-OpenGL_2-Desktop_Qt_5_12_12_clang_64bit-Debug/: .qmake.stash  Makefile  moc_mainview.cpp  moc_mainwindow.cpp
OpenGl/OpenGl2/GuanThiouxOpenGL2 3/build-OpenGL_2-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: .qmake.stash  Makefile  moc_predefs.h  ui_mainwindow.h
Raytracing/Raytracing1/Diffuse/Code/: image.cpp  scene.cpp
Raytracing/Raytracing1/MultipleLights/Code/: scene.cpp
Raytracing/Raytracing1/Phong/Code/: scene.cpp
Raytracing/Raytracing1/Sphere/Code/: scene.cpp
Raytracing/Raytracing1/Triangle/Code/: objloader.h  raytracer.cpp
Raytracing/Raytracing1/planar/Code/: objloader.cpp
Raytracing/Raytracing2/Anti-alising/src/: scene.cpp
Raytracing/Raytracing2/Shadow/src/: scene.cpp  triple.cpp  triple.h
(+33 files in other folders)
